# libashe

./: .clang-format  .cproject  .gitignore  .project  Makefile.am  ManagedBinary.h  Number.h  SectionBlock2D.h  Semaphore.h  bootstrap.sh  configure.ac  libashe.sln  libashe.vcxproj  libashe.vcxproj.filters
ColourSpace/: ColourSpace.cpp  ColourSpace.h
Descendants/: DescendantPipe.cpp  DescendantPipe.h  DescendantProcess.cpp  DescendantProcess.h
Descendants/example/: descendant_tester.cpp
Descendants/examples/: join_handler_thread.cpp
Frelish/: Fjord.cpp  Fjord.h  Frelish.cpp  Frelish.h  Icebank.cpp  Icebank.h  StrongRune.cpp  StrongRune.h  WeakRune.cpp  WeakRune.h
Semaphore/: Semaphore.cpp  Semaphore.h
Semaphore/examples/: concurrent_file_open_limit.cpp
Siblings/: IPEndpoint.cpp  IPEndpoint.h  TCPSocket.cpp  TCPSocket.h
ThreadPool/: ThreadPool.cpp  ThreadPool.h
TransitiveInterface/: TransitiveInterface.cpp  TransitiveInterface.h
UUID/: UUID.cpp  UUID.h
UUID/examples/: collision_test.cpp  comparison_with_libuuid.cpp
WebSocket/: WebSocket.cpp  WebSocket.h
WebSocket/coreutils/: base64.c  sha1.c
WebSocket/examples/: echowsserver.cpp
__MFCComponents/: stdafx.cpp
__coreutils/: base64.c  sha1.c
doc/: Ashe-OS-Codes.en-gb.md  openssl_bio.en-gb.md
examples/: Makefile.am  juggling.cpp  nonblock_wsechoserver.cpp
examples/openssl_bio/: openssl_bio.cpp
examples/tests/: endian.cpp
examples/tests/uuid/: asheutil-uuid.cpp  collision_test.cpp  libuuid_perf.cpp  randomise_collision_test.cpp  uuid-randomise_collision_test.cpp
src/: AsheClass.cpp  AsheException.cpp  Base64Decoder.cpp  Base64Encoder.cpp  Buffer.cpp  Class.cpp  ColourSpace.cpp  DescendantPipe.cpp  DescendantProcess.cpp  Endian.cpp  Exception.cpp  FilterInterface.cpp  Fjord.cpp  Frelish.cpp  HelperException.cpp  IPEndpoint.cpp  Icebank.cpp  LAsheException.cpp  Makefile.am  MessageDigest.cpp  ModuleException.cpp  Process.cpp  Regex.cpp  Semaphore.cpp  StrongRune.cpp  TCPSocket.cpp  ThreadPool.cpp  TransitiveInterface.cpp  UUID.cpp  WeakRune.cpp  WebSocket.cpp  __ArrayArgument.h  __internal.cpp  __internal.h  __internal.hpp  __openssl.cpp  __openssl.h  __openssl.hpp  __regex.cpp  __regex.hpp  (+5 more)
src/__MFCComponents/: Resource.h  libashe.cpp  libashe.def
src/__MFCComponents/res/: libashe.rc2
src/__coreutils/: base64.h
src/examples/: join_by_mother.cpp  openssl_bio.cpp  workunit_assignment_delays.cpp
src/libashe/: AsheClass.h  AsheException.h  Base64Decoder.h  Base64Decoder.hpp  Base64Encoder.h  Base64Encoder.hpp  Buffer.hpp  Class.hpp  ColourSpace.h  DescendantPipe.h  DescendantProcess.h  Endian.h  Endian.hpp  Exception.hpp  FilterInterface.h  FilterInterface.hpp  Fjord.h  Frelish.h  HelperException.hpp  HostEndian.h  IPEndpoint.h  Icebank.h  LAsheException.hpp  Logger.h  MFCLinkage.h  ManagedBinary.h  MessageDigest.h  MessageDigest.hpp  ModuleException.hpp  Number.h  OSCode.h  OSCode.hpp  Process.h  Regex.hpp  RegexHelper.h  SectionBlock2D.h  Semaphore.h  Semaphore.hpp  StringUtils.hpp  StrongRune.h  (+11 more)
src/tests/: all.cpp  common.hpp  endian.cpp  lib-init.cpp  noability.cpp  openssl.cpp
src/tests/uuid/: libuuid_perf.cpp  uuid-collision_test.cpp
