exampledir = $(datarootdir)/@PACKAGE@/examples
example_DATA =\
	collision_test.cpp\
	comparison_with_libuuid.cpp\
	concurrent_file_open_limit.cpp\
	descendant_tester.cpp\
	echowsserver.cpp\
	join_by_mother.cpp\
	join_handler_thread.cpp\
	juggling.cpp\
	nonblock_wsechoserver.cpp\
	workunit_assignment_delays.cpp
